test/policy/mutate/overlay.yaml
# file path relative to project root
input:
  policy: examples/mutate/overlay/policy_imagePullPolicy.yaml
  resource: examples/mutate/overlay/nginx.yaml
expected:
  passes: true
  mutation:
    patched_resource: test/output/op_overlay_nginx.yaml
    rules:
      - name: set-image-pull-policy
        type: Mutation
        messages:
          - "Rule set-image-pull-policy: Overlay successfully applied."
