test/policy/mutate/patches.yaml
# file path relative to project root
input:
  policy: examples/mutate/patches/policy_endpoints.yaml
  resource: examples/mutate/patches/endpoints.yaml
expected:
  passes: true
  mutation:
    patched_resource: test/output/op_patches_endpoints.yaml
    rules:
      - name: pEP
        type: Mutation
        messages:
          - "Rule pEP: Patches successfully applied."
