test/policy/mutate/policy_mutate_pod_foreach_with_context.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: resolve-image
spec:
  admission: true
  background: false
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      foreach:
      - context:
        - configMap:
            name: some-config-map
            namespace: some-namespace
          name: dictionary
        list: request.object.spec.containers
        patchStrategicMerge:
          spec:
            containers:
            - image: '{{ dictionary.data.image }}'
              name: '{{ element.name }}'
    name: resolve-image-containers
    preconditions:
      all:
      - key: '{{request.operation}}'
        operator: AllIn
        value:
        - CREATE
        - UPDATE
  validationFailureAction: Audit
