test/policy/mutate/resource_mutate_pod_disable_automountingapicred.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp
spec: 
  serviceAccountName: default
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
